# miniswe

./: .dockerignore  .gitattributes  .gitignore  4050-config.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  design.md  improvements.md  loop-fix.md  next-steps.md  nohup.out  start-bigger-devstral-small-2.sh  start-devstral-small-2.sh  start-gemma4-31b.sh  start-gemma4.sh  start-glm-4.5-air.sh  start-gpt-oss-20b.sh  start-mistral-small-3.sh  start-mistral-small-4.sh  start-qwen3-235b.sh  start-qwen3-coder-next.sh  start-qwen3-coder.sh  suggestions.md  workspace-awareness-design.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.minime/: .gitignore  config.toml  lessons.md  profile.md
.miniswe/: .gitignore  config.toml  guide.md  lessons.md  profile.md
docs/: TODO.md  agent-comparison-design.md  aider-features-plan.md  audit-bugs-and-security.md  coding-efficiency-analysis.md  context-management.md  demo-video-scenario.md  errors.md  experiment-results-20260405.md  experiment-results-20260511.md  lsp-design.md  plan-system-design.md  plan-ux-design.md  refactoring-todo.md  remaining-fail-points.md  replay-mode-design.md  safe-headless-execution.md  simple-tier-probe-results-devstral.jsonl  simple-tier-probe-results-gemma4.jsonl  simple-tier-probe-results-qwen.jsonl  simple-tier-probe2-devstral.jsonl  simple-tier-probe2-gemma4.jsonl  simple-tier-probe2-qwen.jsonl  simple-tier-probeE-devstral.jsonl  simple-tier-probeE-gemma4.jsonl  simple-tier-probeE-qwen.jsonl  simple-tier-probeFG-san-devstral.jsonl  simple-tier-probeFG-san-gemma4.jsonl  simple-tier-probeFG-san-qwen.jsonl  simple-tier-probeISO-devstral-GvsH.jsonl  success-validation-design.md  threading-test-design.md  tiered-agent-design.md  unified-compression-design.md  usage.md  vast-setup.md
scripts/: Dockerfile.aider  Dockerfile.benchmark  bench-common.sh  bench-peek.sh  bench-task-B-max-rounds-flag.sh  bench-task-C-token-logging.sh  bench-task-stork-weighted-rr.sh  bench-watch.sh  benchmark-providers.sh  classifier-prompt-probe.py  compaction-judge.py  compaction-report.py  docker-entrypoint.sh  headless-improve.txt  kill-benchmark-docker.sh  repl-router-classifier-probe.py  run-agent-comparison.sh  run-aider-bench.sh  run-benchmark-docker-fast.sh  run-benchmark-docker.sh  run-benchmark-native.sh  run-benchmark.sh  run-compaction-bench.sh  run-llama-cuda.sh  run-replay-docker.sh  run-replay-matrix.sh  run-simplified-aider-bench.sh  run-simplified-bench-docker.sh  simple-tier-probe-all-models.sh  simple-tier-probe-rich.py  simple-tier-probe.py
scripts/replay/: extract-fixture.py  reconstruct-trajectory.py
scripts/seeds/: system-prompt-override-halfwired.patch
scripts/vast/: bootstrap-vast.sh  run-on-vast.sh
src/: lib.rs  logging.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: agent.rs  config.rs  docs.rs  info.rs  init.rs  mod.rs  repl.rs  run.rs
src/cli/commands/agent/: debugger.rs  display.rs  hints.rs  loop_detector.rs  permissions.rs  spiral.rs  subagent.rs  validation.rs
src/config/: mod.rs
src/context/: compress.rs  compressor.rs  mod.rs  providers.rs
src/context/compress/: format.rs  imports.rs  profile.rs  reading.rs  tool_result.rs
src/knowledge/: graph.rs  indexer.rs  mod.rs  profile.rs  repo_map.rs  ts_extract.rs
src/knowledge/indexer/: end_line.rs  lang.rs  summary.rs  walker.rs
src/knowledge/indexer/lang/: common.rs  go.rs  js_ts.rs  python.rs  rust.rs
src/knowledge/queries/: scala_tags.scm
src/llm/: mod.rs  router.rs  types.rs  xml_tool_calls.rs
src/lsp/: client.rs  mod.rs  servers.rs  transport.rs
src/lsp/servers/: download.rs  install.rs  platform.rs  verify.rs
src/mcp/: client.rs  config.rs  mod.rs  registry.rs
src/runtime/: mod.rs
src/skills/: discover.rs  display.rs  mod.rs  render.rs
src/tools/: args.rs  cargo_check.rs  code_intel.rs  definitions.rs  delete_file.rs  describe_code.rs  dispatch.rs  edit.rs  edit_file.rs  edit_orchestration.rs  fix_file.rs  mod.rs  permissions.rs  plan.rs  read_file.rs  read_symbol.rs  search.rs  shell.rs  snapshots.rs  task_update.rs  transform.rs  web.rs  write_file.rs
src/tools/edit_file/: apply.rs  mod.rs  parse.rs
src/tools/fast/: ast.rs  auto_revert.rs  check.rs  dispatch.rs  feedback.rs  insert_at.rs  lines.rs  mod.rs  replace_range.rs  revert.rs  revisions.rs  show_rev.rs
src/tools/plan/: actions.rs  hints.rs  step.rs  validate.rs
src/tools/refactor/: add_param.rs  dispatch.rs  drop_param.rs  mod.rs  model_edit.rs  rename.rs  sites.rs  validation.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: e2e_agent.rs  e2e_context.rs  e2e_edit_file.rs  e2e_fast_mode.rs  e2e_fix_file.rs  e2e_fix_loop.rs  e2e_index.rs  e2e_lsp.rs  e2e_mcp_client.rs  e2e_permissions.rs  e2e_plan.rs  e2e_refactor.rs  e2e_snapshots.rs  e2e_tools.rs  e2e_tui_hidden_output.rs  offline_compaction_probe.rs
tests/edit_file_parts/: execute_preplan.rs
tests/helpers/: mod.rs
