[package]
name = "miniswe"
version = "0.1.0"
edition = "2024"
description = "A lightweight CLI coding agent for local LLMs"
license = "MIT"

[features]
default = ["lang-rust", "lang-python", "lang-javascript", "lang-typescript", "lang-go"]
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-tags"]
# Tier 1: default languages
lang-rust = ["tree-sitter", "dep:tree-sitter-rust"]
lang-python = ["tree-sitter", "dep:tree-sitter-python"]
lang-javascript = ["tree-sitter", "dep:tree-sitter-javascript"]
lang-typescript = ["tree-sitter", "dep:tree-sitter-typescript"]
lang-go = ["tree-sitter", "dep:tree-sitter-go"]
# Tier 2: opt-in languages
lang-java = ["tree-sitter", "dep:tree-sitter-java"]
lang-c = ["tree-sitter", "dep:tree-sitter-c"]
lang-cpp = ["tree-sitter", "dep:tree-sitter-cpp"]
lang-ruby = ["tree-sitter", "dep:tree-sitter-ruby"]
lang-php = ["tree-sitter", "dep:tree-sitter-php"]
lang-csharp = ["tree-sitter", "dep:tree-sitter-c-sharp"]
lang-kotlin = ["tree-sitter", "dep:tree-sitter-kotlin"]
lang-swift = ["tree-sitter", "dep:tree-sitter-swift"]
lang-scala = ["tree-sitter", "dep:tree-sitter-scala"]
lang-zig = ["tree-sitter", "dep:tree-sitter-zig"]
lang-elixir = ["tree-sitter", "dep:tree-sitter-elixir"]
lang-haskell = ["tree-sitter", "dep:tree-sitter-haskell"]
lang-lua = ["tree-sitter", "dep:tree-sitter-lua"]
all-languages = [
    "lang-rust", "lang-python", "lang-javascript", "lang-typescript",
    "lang-go", "lang-java", "lang-c", "lang-cpp",
    "lang-ruby", "lang-php", "lang-csharp", "lang-kotlin", "lang-swift",
    "lang-scala", "lang-zig", "lang-elixir", "lang-haskell", "lang-lua",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Tree-sitter AST parsing (activated via feature flags)
tree-sitter = { version = "0.26", optional = true }
tree-sitter-tags = { version = "0.26", optional = true }
# Tier 1
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
# Tier 2
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-kotlin = { version = "0.3", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-scala = { version = "0.25", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }

# Graph algorithms (PageRank)
petgraph = "0.7"

# File watching
notify = "7"

# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Misc
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"          # respects .gitignore
futures = "0.3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
lsp-types = "0.97.0"
dashmap = "6.1.0"
flate2 = "1.1.9"
zip = "8.4.0"
tar = "0.4.45"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[[bin]]
name = "miniswe"
path = "src/main.rs"
